# ODriveCan

./: 404.html  LICENSE  README.md  index.html  mkdocs.yaml  odrive_database.db  readme.md  requirements.txt  setup.cfg
.github/workflows/: docs.yaml  publish-to-pypi.yaml
database/database/: index.html
docs/: ODriveSetup.md  database_userDefinedTable.md  index.md  piCANHatSetup.md
docs/css/: extra_css.ss
docs/database/: database.md
docs/setup/canhat/: setup.md
docs/setup/odrive/: setup.md
examples/: .advanced.py.swp  advanced.py  one_odrive.py  two_odrives.py  user_defined_table.py
examples/pendulumArmGravityCompensation/: 1dof.py
search/: search_index.json
setup/canhat/setup/: index.html
setup/odrive/setup/: index.html
src/odrivecan/: __init__.py  odrivecan.py
src/pyodrivecan/: __init__.py  odrivedatabase.py  oneOdrive_example.py  pyodrivecan.py  twoOdrive_example.py
