[metadata]
name = pyodrivecan
version = attr: pyodrivecan.__version__
author = Dylan Ballback
author_email = dylanballback19@gmail.com
url = https://github.com/dylanballback/ODriveCan
description = A package for controlling O-Drive Motor Controller using can with Python. 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = O-Drive, CAN, Python
license = mit
classifiers =
    Topic :: Printing
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
python_requires = >=3.8

install_requires =
    python-can

package_dir=
    =src